Extract getXXXAsArray methods in a separate utility class ProtocolUtil. Render GC colors with a four elements array.